src/objects/Apttus_Config2__ConfigCustomDisplayColumns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds information about fields displayed in installed product view, cart view etc</description>
    <fields>
        <fullName>Apttus_Config2__DisplayType__c</fullName>
        <description>The column display type. 

Valid values are the following

Cart LineItem 
Installed Product</description>
        <inlineHelpText>The column display type. 

Valid values are the following

Cart LineItem 
Installed Product</inlineHelpText>
        <label>Display Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Enter the field API name for the column.</description>
        <inlineHelpText>Enter the field API name for the column.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <description>The flow associated with the column</description>
        <inlineHelpText>The flow associated with the column</inlineHelpText>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HeaderStyle__c</fullName>
        <description>The style used to display the header of a column, used primarily for adding inline CSS styles.</description>
        <inlineHelpText>The style used to display the header of a column, used primarily for adding inline CSS styles.</inlineHelpText>
        <label>Header Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the column allows its value to be edited.</description>
        <inlineHelpText>Indicates whether the column allows its value to be edited.</inlineHelpText>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPricePoint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine type of a line item for use in Cost &amp; Profitability Price Waterfall

if checked, item is a Price Point. If unchecked, item is an Adjustment.</description>
        <inlineHelpText>Used to determine type of a line item for use in Cost &amp; Profitability Price Waterfall


if checked, item is a Price Point. If unchecked, item is an Adjustment.</inlineHelpText>
        <label>Is Price Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsSortable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the column supports sorting.</description>
        <inlineHelpText>Indicates whether the column supports sorting.</inlineHelpText>
        <label>Is Sortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The column display sequence</description>
        <inlineHelpText>The column display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StyleClass__c</fullName>
        <description>Holds the Style classes applied to dynamic columns</description>
        <inlineHelpText>Holds the Style classes applied to dynamic columns</inlineHelpText>
        <label>Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Style__c</fullName>
        <description>The style used to display the column, used primarily for adding inline CSS styles.</description>
        <inlineHelpText>The style used to display the column, used primarily for adding inline CSS styles.</inlineHelpText>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Config Custom Display Columns</label>
</CustomObject>